--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="kk" lang="kk">
+<html xmlns="kk" lang="kk">
 
 <head>
 
-<!-- Шрифттерді енгізу -->
+<!-- Шрифттерді импорттау -->
 <link href="https://fonts.googleapis.com/css2?family=Creepster&family=Comfortaa:wght@400;700&family=Pacifico&family=Amatic+SC&display=swap&subset=cyrillic,latin" rel="stylesheet"/>
 
 <title>POPHEADSCIRCLEJERK.COM</title>
@@ -14,34 +14,33 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<!-- Стиль бөлімі -->
 <style>
-  /* Негізгі параметрлерді қалпына келтіру */
+  /* Негізгі тазалау */
   * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
   }
 
-  /* Дене стильдері */
+  /* Дене стилі */
   body {
-      background-color: #F9E5D7; /* Ашық шабдалы фоны */
+      background-color: #F9E5D7; /* Ашық шабдалы түсі */
       color: #333;
-      font-family: 'Comfortaa', sans-serif; /* Мәтін үшін сүйкімді әрі ресми шрифт */
+      font-family: 'Comfortaa', sans-serif; /* Кәсіби және сүйкімді қаріп */
       line-height: 1.6;
       margin: 0;
-      padding: 50px 120px; /* Үлкен шеттері */
+      padding: 50px 120px; /* Десктоп үшін үлкен маржиндер */
       text-align: left;
-      padding-top: 200px; /* Тақырыптың астынан басталады */
+      padding-top: 220px; /* Қалқымалы тақырыпқа орын қалдыру */
   }
 
-  /* Header стильдері */
+  /* Тақырып стилі */
   header {
       width: 100%;
       padding: 0;
       background-color: #79A6A3;
       background-image: url('https://64.media.tumblr.com/50a31ed363f1a172afafacf0f9a57ad2/579280c9d1a51790-d7/s640x960/0ac9acf1ed4fe402a46b3299dc0a534230d5d8ca.pnj');
-      background-size: cover; /* Суретті толық қаптау */
+      background-size: cover;
       background-position: center;
       opacity: 0.8;
       border-bottom: 2px solid #79A6A3;
@@ -61,54 +60,115 @@
       text-align: center;
   }
 
-  /* Subreddit сілтемесі курсив шрифтпен */
-  header .subreddit-link {
+  /* Ресми Subreddit және Blog сілтемелері */
+  header .link-group {
       text-align: center;
       margin-top: 10px;
   }
 
-  header .subreddit-link a {
+  header .link-group a {
       text-decoration: none;
-      font-family: 'Pacifico', cursive; /* Курсив шрифті */
+      font-family: 'Pacifico', cursive;
       font-size: 1.1em;
       color: #fff;
-      background-color: #E7926C; /* Қызғылт-сары фон */
+      background-color: #E7926C; /* Ашық қызғылт сары түс */
       padding: 8px 16px;
       border-radius: 15px;
+      margin-right: 10px;
       transition: background-color 0.3s ease;
-  }
-
-  header .subreddit-link a:hover {
-      background-color: #EEC1A4; /* Ашық шабдалы қылшықтаған кезде */
-  }
-
-  /* Medium тақырыптары үшін стиль - сүйкімді Poppins шрифті */
-  header .medium-titles {
-      margin-top: 10px;
-      font-family: 'Poppins', sans-serif; /* Latin and Cyrillic-supported шрифт */
-      font-size: 0.7em; /* Make the title buttons smaller */
-      color: #fff;
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-  }
-
-  header .medium-titles a {
-      margin: 1px; /* Slightly smaller margin */
-      padding: 2px 6px; /* Smaller padding for buttons */
-      text-decoration: none;
-      color: #fff;
-      background-color: #E7926C;
-      border-radius: 15px;
       display: inline-block;
-      transition: background-color 0.3s ease;
   }
 
-  header .medium-titles a:hover {
-      background-color: #EEC1A4; /* Ашық шабдалы қылшықтаған кезде */
+  header .link-group a:hover {
+      background-color: #EEC1A4; /* Ашық шабдалы түсінде */
   }
 
-  /* Medium пост стильдері */
+  /* Орта тақырыптары тек ДК-де */
+  @media screen and (min-width: 769px) {
+      header .medium-titles {
+          margin-top: 10px;
+          font-family: 'Poppins', sans-serif; /* Сүйкімді қаріп */
+          font-size: 0.7em;
+          color: #fff;
+          display: flex;
+          justify-content: center;
+          flex-wrap: wrap;
+      }
+
+      header .medium-titles a {
+          margin: 1px;
+          padding: 2px 6px;
+          text-decoration: none;
+          color: #fff;
+          background-color: #E7926C;
+          border-radius: 15px;
+          display: inline-block;
+          transition: background-color 0.3s ease;
+      }
+
+      header .medium-titles a:hover {
+          background-color: #EEC1A4;
+      }
+
+      /* ДК-де тек Subreddit батырмасын көрсету */
+      .visit-blog {
+          display: none; /* ДК-де "Блогқа өту" сілтемесін жасыру */
+      }
+  }
+
+  /* Мобильді құрылғыларға арналған */
+  @media screen and (max-width: 768px) {
+      .medium-titles {
+          display: none; /* Мобильді құрылғыларда орта тақырыптарын жасыру */
+      }
+
+      .visit-blog {
+          display: block;
+          text-align: center;
+          margin-top: 25px; /* Үстіңгі маржинді үлкейту */
+      }
+
+      .visit-blog a {
+          font-family: 'Pacifico', cursive;
+          background-color: #E7926C;
+          color: white;
+          padding: 10px;
+          border-radius: 15px;
+          text-decoration: none;
+      }
+
+      .visit-blog a:hover {
+          background-color: #EEC1A4;
+      }
+
+      /* Мобильді құрылғылардағы маржиндерді алып тастау */
+      body {
+          padding: 10px;
+          text-align: center;
+      }
+
+      /* Мобильді құрылғыларға арналған орта посттардың үстіңгі маржинін үлкенірек ету */
+      #postmargin {
+          margin-top: 180px; /* Үлкен үстіңгі маржин - тақырыптың астына орналастыру */
+      }
+
+      .medium-post {
+          margin-top: 40px; /* Үлкен үстіңгі маржин */
+          margin-left: 5px; /* Кіші бүйірлік маржиндер */
+          margin-right: 5px; /* Кіші бүйірлік маржиндер */
+          font-size: 0.9em; /* Мобильді құрылғылар үшін кіші шрифт */
+      }
+
+      .medium-post h3 {
+          font-size: 1.2em; /* Кіші тақырыптар */
+      }
+
+      .medium-post p {
+          font-size: 0.9em; /* Кіші мәтін шрифттері */
+      }
+  }
+
+  /* Пост стилі */
   .medium-post {
       background-color: #fff;
       padding: 20px;
@@ -129,9 +189,10 @@
       color: #E5B36A;
   }
 
+  /* Кіші тақырыптар */
   .medium-post h3 {
       font-family: 'Comfortaa', sans-serif;
-      font-size: 1.8em;
+      font-size: 1.4em; /* Кіші тақырыптар */
       color: #E7926C;
       margin-bottom: 10px;
       text-transform: uppercase;
@@ -152,7 +213,7 @@
       font-family: 'Comfortaa', sans-serif;
   }
 
-  /* Суреттерді орталықтау */
+  /* Суреттерді орталау */
   .medium-post img {
       max-width: 100%;
       height: auto;
@@ -161,15 +222,15 @@
       border-radius: 10px;
   }
 
-  /* "Толығырақ оқу" және "Кішігірім оқу" түймелері */
+  /* "Көбірек оқу" белгісінің стилі */
   label.read-more-label {
       display: inline-block;
       cursor: pointer;
       padding: 8px 12px;
-      background-color: #E7926C; /* Қызғылт-сары фон */
+      background-color: #E7926C; /* Ашық қызғылт сары түс */
       color: white;
       border-radius: 5px;
-      font-family: 'Pacifico', cursive; /* Курсив шрифті */
+      font-family: 'Comfortaa', sans-serif;
       margin-top: 10px;
       transition: background-color 0.3s ease;
   }
@@ -183,24 +244,17 @@
       display: none;
   }
 
-  /* Белгіленген кезде толық мазмұнды көрсету */
-  .read-more-toggle:checked + .full-content {
+  /* Толық мазмұнды көрсету белгішесі қойылған кезде */
+  .read-more-toggle:checked ~ .full-content {
       display: block;
   }
 
-  .read-more-toggle:not(:checked) + .full-content {
-      display: none;
+  /* Белгішесі қойылған кезде "Көбірек оқу" өзгеруі */
+  .read-more-toggle:checked + label.read-more-label::after {
+      content: 'Аз оқу';
   }
 
-  .read-more-toggle:checked + .full-content + .read-more-label::before {
-      content: "Кішігірім оқу"; /* "Read less" in Kazakh */
-  }
-
-  .read-more-toggle:not(:checked) + .full-content + .read-more-label::before {
-      content: "Толығырақ оқу"; /* "Read more" in Kazakh */
-  }
-
-  /* Footer стильдері */
+  /* Футер стилі */
   footer {
       text-align: center;
       padding: 15px;
@@ -215,51 +269,20 @@
   footer .kazakh-flag {
       font-size: 1.5em;
   }
-
-  /* Mobile Styles */
-  @media screen and (max-width: 768px) {
-      body {
-          padding: 0; /* Remove margins on mobile */
-      }
-
-      /* Hide the Medium titles on mobile and replace with "Visit blog" link */
-      .medium-titles {
-          display: none;
-      }
-
-      .visit-blog {
-          text-align: center;
-          margin-top: 10px;
-      }
-
-      .visit-blog a {
-          font-family: 'Pacifico', cursive;
-          background-color: #E7926C;
-          color: white;
-          padding: 10px;
-          border-radius: 15px;
-          text-decoration: none;
-      }
-
-      .visit-blog a:hover {
-          background-color: #EEC1A4;
-      }
-  }
 </style>
 
-<!-- RSS and interactivity embedded within HTML -->
 <script>
 /* Эмодзилер тізімі */
 const emojis = ['🍑', '💋', '🔥', '🍆', '👅', '💦', '😈', '🖤', '💃', '🚬', '💨', '💄', '👠'];
 
-/* Эмодзилерді кездейсоқ таңдау */
+/* Эмодзиді кездейсоқ таңдау */
 function getRandomEmoji() {
     return emojis[Math.floor(Math.random() * emojis.length)];
 }
 
-/* Medium Тақырыптарын Жүктеу */
+/* Medium тақырыптарын жүктеу */
 function loadMediumTitles() {
-    let mediumRSS = 'https://medium.com/feed/@popheadscirclejerk'; // @popheadscirclejerk feed-тен тақырыптарды алу
+    let mediumRSS = 'https://medium.com/feed/@popheadscirclejerk'; // Орта тақырыптарын жүктеу
     fetch(`https://rss2json.com/api.json?rss_url=${encodeURIComponent(mediumRSS)}`)
     .then(response => response.json())
     .then(data => {
@@ -273,29 +296,26 @@ function loadMediumTitles() {
     });
 }
 
-/* Medium Посттарын Жүктеу */
+/* Medium Посттарын жүктеу */
 function loadMediumFeed() {
-    let mediumRSS = 'https://medium.com/feed/popheadscirclejerk'; // popheadscirclejerk feed-тен посттарды алу
+    let mediumRSS = 'https://medium.com/feed/popheadscirclejerk'; // Орта посттарын жүктеу
     fetch(`https://rss2json.com/api.json?rss_url=${encodeURIComponent(mediumRSS)}`)
     .then(response => response.json())
     .then(data => {
         const postsContainer = document.getElementById('medium-posts');
         data.items.forEach((item, index) => {
-            let truncatedDescription = item.description.split(" ").slice(0, 30).join(" ") + '...'; // Алғашқы 30 сөзін көрсету
+            let truncatedDescription = item.description.split(" ").slice(0, 30).join(" ") + '...'; // Алғашқы 30 сөзді көрсету
             let postElement = `
                 <div class="medium-post">
                     <h3><a href="${item.link}" target="_blank">${item.title}</a></h3>
                     <p>${truncatedDescription}</p>
 
-                    <!-- Белгіленген кезде "Толығырақ оқу" түймесін іске қосу -->
                     <input type="checkbox" class="read-more-toggle" id="toggle${index}" />
+                    <label for="toggle${index}" class="read-more-label">Көбірек оқу</label>
                     <div class="full-content">
                         <p>${item.description}</p>
-                        ${item.thumbnail ? `<img src="${item.thumbnail}" alt="Image">` : ''}
+                        ${item.thumbnail ? `<img src="${item.thumbnail}" alt="Сурет">` : ''}
                     </div>
-
-                    <!-- "Толығырақ оқу" түймесі ретінде белгіні көрсету -->
-                    <label for="toggle${index}" class="read-more-label"></label>
                 </div>
             `;
             postsContainer.innerHTML += postElement;
@@ -303,7 +323,7 @@ function loadMediumFeed() {
     });
 }
 
-/* Барлық фидтерді жүктеу */
+/* Барлық ленталарды жүктеу */
 document.addEventListener('DOMContentLoaded', () => {
     loadMediumTitles();
     loadMediumFeed();
@@ -316,25 +336,20 @@ document.addEventListener('DOMContentLoaded', () => {
 <header>
     <h1>POPHEADSCIRCLEJERK.COM</h1>
 
-    <div class="subreddit-link">
+    <div class="link-group">
       <a href="https://reddit.com/r/popheadscirclejerk" target="_blank">Ресми Subreddit</a>
+      <a href="https://blog.popheadscirclejerk.com" target="_blank" class="visit-blog">Блогқа өту</a>
     </div>
 
-    <!-- Medium тақырыптары (PC version only) -->
+    <!-- ДК-де ғана көрінетін орта тақырыптар -->
     <div class="medium-titles">
         <!-- Тақырыптар осында жүктеледі -->
     </div>
-
-    <!-- Mobile "Visit Blog" button -->
-    <div class="visit-blog">
-      <a href="https://blog.popheadscirclejerk.com" target="_blank">Блогқа өту</a>
-    </div>
-
 </header>
 
 <section id="postmargin">
   <div id="medium-posts">
-    <!-- Medium RSS фид посттары осында жүктеледі -->
+    <!-- Орта ленталары осында динамикалық түрде жүктеледі -->
   </div>
 </section>
 
