--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <!-- Шрифттерді импорттау -->
 <link href="https://fonts.googleapis.com/css2?family=Creepster&family=Comfortaa:wght@400;700&family=Pacifico&family=Amatic+SC&display=swap&subset=cyrillic,latin" rel="stylesheet"/>
 
-<title>POPHEADSCIRCLEJERK.COM</title>
+<title>ПОПХЕДССИРКЛДЖЕРК</title>
 <link rel="shortcut icon" href="{Favicon}">
 <link rel="alternate" type="application/rss+xml" href="{RSS}">
 
